test/syntax-errors/dup-func-names/dup-func-names.foster
foo = { 0 };

foo = { 1 };

main =  { foo ! };

